sun base64 encoder and decoder functions removed and java util base64 encoder decoder methods added to project.